--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,7 @@
 @tailwind base;
+
 @tailwind components;
-<<<<<<< HEAD
-=======
-@tailwind utilities@tailwind base;
-@tailwind components;
->>>>>>> 95ff0a50abe39118b95b1bbbbf4d02f063f8e07d
-@tailwind utilities
+
+@tailwind utilities;
 
 
-
-
-<<<<<<< HEAD
-  
-=======
-  
-
->>>>>>> 95ff0a50abe39118b95b1bbbbf4d02f063f8e07d
